     make -C $DAIKONDIR/java javadoc
   It is also available at http://plse.cs.washington.edu/daikon/download/api/ .

===========================================================================

5.3.10 (August 1, 2016)

A new front end for LLVM is available.
See https://github.com/markus-kusano/udon.
You can use it with any program that can be compiled to LLVM.

===========================================================================

5.3.8 (August 1, 2016)

Miscellaneous bug fixes and minor improvements.

===========================================================================

5.3.6 (July 5, 2016)

A new front end for Simulink/Stateflow (SLSF) block diagrams is available.
See https://bitbucket.org/verivital/hynger .

Fjalar/Kvasir:
 - DynComp has been modified to improve its accuracy and correct its
   garbage collection routine.

===========================================================================

5.3.4 (June 1, 2016)

Miscellaneous bug fixes and minor improvements.

===========================================================================

5.3.2 (May 2, 2016)

Daikon:
 - Command-line argument --user-defined-invariant makes Daikon compute a
   user-defined invariant in addition to those that are built in to Daikon.
 - Command-line argument --disable-all-invariants disables all of Daikon's
   built-in invariants.  Subsequent command-line options may enable some of
   them.

Fjalar/Kvasir:
 - Minor changes to support Scientific Linux.

Documentation:
- Improved the discussion in the Troubleshooting chapter of the User Guide
  on how to respond to "Could not find or load main class."

===========================================================================

5.3.0 (April 5, 2016)

Daikon:
- We have improved splitter processing. Splitter expressions containing
  'orig' now work correctly.  Also, A splitter expression containing
  references to a parameter and an unqualified member variable with the
  name will now work correctly.

Kvasir: