@@ -2621,10 +2621,9 @@ public final class FileIO {
               kind,
               function_args,
               name);
-      // TODO: uncomment the assertion once bugs are fixed.
-      // if ((kind == VarKind.FIELD || kind == VarKind.ARRAY) && enclosing_var == null) {
-      //   throw new AssertionError("enclosing-var not specified for variable " + name);
-      // }
+      if ((kind == VarKind.FIELD || kind == VarKind.ARRAY) && enclosing_var == null) {
+        throw new AssertionError("enclosing-var not specified for variable " + name);
+      }
     }
 
     /**
