@@ -2,3 +2,4 @@
 constantMinMaxMatch:::EXIT1
 ===========================================================================
 singletonSequenceOneOfSuppressed:::EXIT1
+a has only one value
